[feature] slider prevent layoutshifting for overlay-component

--- a/Resources/Public/Styles/Slider/Slider.css
+++ b/Resources/Public/Styles/Slider/Slider.css
@@ -7,6 +7,9 @@ atomic-slider.fullHeight{
 }
 
 /* prevent layout shifting*/
+atomic-overlay:not(:defined){
+    display:none;
+}
 atomic-slider:not(:defined),
 atomic-slider.fullHeight:not(:defined){
     height: 70vh;
